--- a/app/src/main/res/layout/item_listview_test.xml
+++ b/app/src/main/res/layout/item_listview_test.xml
@@ -21,11 +21,19 @@
 
         <TextView
             android:id="@+id/time"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="110dp"
+            android:layout_marginRight="16dp"
             android:textColor="#000"
             android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="img"/>
     </LinearLayout>
 
     <TextView
